Fixing collapse and dropdown

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -667,7 +667,7 @@ td.tight {
 }
 
 .toggler-wrapper input[type="checkbox"]:checked+.toggler-slider {
-  background-color: var(--primary);
+  background-color: var(--bs-primary);
 }
 
 .toggler-wrapper .toggler-slider {
